test/compile_errors/err_regex_value_no_capture.w
//! expect-check-fail: undefined variable

fn main:
    let line = "status=200"
    let r = /^status=(\d+)$/
    if line =~ r:
        print($1)
